--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -389,7 +389,7 @@
         return array;
     }
 
-    let selectedLeftItem = null;
+  let selectedLeftItem = null;
 
 function selectLeftItem(element) {
     if (selectedLeftItem) {
@@ -407,6 +407,10 @@ function selectRightItem(element) {
         element.classList.add('correct');
         selectedLeftItem.classList.add('used');
         selectedLeftItem.classList.remove('selected');
+        
+        // Mostrar imagem e texto da lição correspondente
+        showLessonData(selectedLeftItem.dataset.match - 1);
+
         selectedLeftItem = null;
         checkCompletion(); // Verifica se todas as correspondências foram feitas
     } else {
@@ -416,6 +420,27 @@ function selectRightItem(element) {
             element.classList.remove('wrong');
         }, 1000);
     }
+}
+
+// Função para exibir imagem e texto da lição
+function showLessonData(index) {
+    const data = lessonData[index];
+    const imageContainer = document.getElementById('image-container');
+    const lessonImage = document.getElementById('lesson-image');
+    const lessonTitle = document.getElementById('lesson-title');
+    const lessonText = document.getElementById('lesson-text');
+
+    lessonImage.src = data.img;
+    lessonTitle.textContent = data.title;
+    lessonText.textContent = data.text;
+
+    imageContainer.style.display = 'flex';
+}
+
+// Função para fechar a imagem
+function closeImage() {
+    const imageContainer = document.getElementById('image-container');
+    imageContainer.style.display = 'none';
 }
 
     function restartGame() {
