--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -448,35 +448,59 @@ function closeImage() {
     }
 
     function generatePDF() {
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF();
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
 
-        // Caminho da logo
-        const logoPath = '../../../../imagens/hannah_logo.png';
+    // Caminho da logo
+    const logoPath = '../../../../imagens/hannah_logo.png';
 
-        const logo = new Image();
-        logo.src = logoPath;
+    const logo = new Image();
+    logo.src = logoPath;
 
-        logo.onload = function() {
-            doc.addImage(logo, 'PNG', 10, 10, 30, 30);
-            doc.setFontSize(12);
-            doc.text("Name: ______________________________________________ Date: ____________", 50, 20);
-            doc.setFontSize(16);
-            doc.text("Hannah Matching Game", 10, 50);
+    logo.onload = function() {
+        // Adiciona a logo ao PDF, centralizada na parte superior
+        doc.addImage(logo, 'PNG', 80, 10, 40, 40);
 
-            let yOffset = 60;
-            document.querySelectorAll('.list-item, .drop-zone').forEach((item) => {
-                if (yOffset > 280) {
-                    doc.addPage();
-                    yOffset = 10;
-                }
-                doc.text(item.textContent, 10, yOffset);
-                yOffset += 10;
-            });
+        // Adiciona o título e as linhas para "Name" e "Date"
+        doc.setFontSize(12);
+        doc.text("Name: ______________________________________________ Date: ____________", 15, 60);
 
-            doc.save("Hannah_Matching_Game.pdf");
-        };
-    }
+        // Adiciona o título centralizado
+        doc.setFontSize(16);
+        doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 70, { align: "center" });
+
+        let yOffset = 80; // Posição vertical inicial
+        const itemGap = 20; // Espaço entre os itens para alinhamento das colunas
+
+        // Arrays para os itens das duas colunas
+        const leftItems = Array.from(document.querySelectorAll('#lessons .list-item'));
+        const rightItems = Array.from(document.querySelectorAll('#explanations .list-item'));
+
+        // Adiciona as duas colunas ao PDF com espaço para ligar com linhas
+        leftItems.forEach((item, index) => {
+            if (yOffset > doc.internal.pageSize.height - 20) { // Adiciona nova página se ultrapassar o limite
+                doc.addPage();
+                yOffset = 20;
+            }
+
+            // Itens da coluna esquerda
+            doc.text(`${index + 1}. ${item.textContent}`, 15, yOffset);
+
+            // Espaço para a linha de ligação
+            doc.line(60, yOffset - 2, 140, yOffset - 2); // Linha entre as colunas para ligação
+
+            // Itens da coluna direita
+            if (rightItems[index]) {
+                doc.text(`${index + 1}. ${rightItems[index].textContent}`, 150, yOffset);
+            }
+
+            yOffset += itemGap; // Move para a próxima linha
+        });
+
+        // Salva o PDF
+        doc.save("Hannah_Matching_Game.pdf");
+    };
+}
 
     function checkCompletion() {
         const allItems = document.querySelectorAll('.list-item.used');
