--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -458,46 +458,74 @@ function closeImage() {
     logo.src = logoPath;
 
     logo.onload = function() {
-        // Adiciona a logo ao PDF, centralizada na parte superior
-        doc.addImage(logo, 'PNG', 80, 10, 40, 40);
+        // Adiciona a logo ao PDF
+        doc.addImage(logo, 'PNG', 10, 10, 30, 30);
 
         // Adiciona o título e as linhas para "Name" e "Date"
         doc.setFontSize(12);
-        doc.text("Name: ______________________________________________ Date: ____________", 15, 60);
+        doc.text("Name: ______________________________________________ Date: ____________", 50, 20);
 
-        // Adiciona o título centralizado
+        // Adiciona o título abaixo
         doc.setFontSize(16);
-        doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 70, { align: "center" });
+        doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 50, { align: "center" });
 
-        let yOffset = 80; // Posição vertical inicial
-        const itemGap = 20; // Espaço entre os itens para alinhamento das colunas
+        let yOffset = 70; // Posição inicial vertical
+        const lineSpacing = 10; // Espaço entre linhas
 
-        // Arrays para os itens das duas colunas
         const leftItems = Array.from(document.querySelectorAll('#lessons .list-item'));
-        const rightItems = Array.from(document.querySelectorAll('#explanations .list-item'));
+        const rightItems = Array.from(document.querySelectorAll('#explanations .drop-zone'));
 
-        // Adiciona as duas colunas ao PDF com espaço para ligar com linhas
-        leftItems.forEach((item, index) => {
-            if (yOffset > doc.internal.pageSize.height - 20) { // Adiciona nova página se ultrapassar o limite
+        leftItems.forEach((leftItem, index) => {
+            if (yOffset > 280) { // Adiciona uma nova página se o conteúdo ultrapassar o limite da página
                 doc.addPage();
                 yOffset = 20;
             }
 
-            // Itens da coluna esquerda
-            doc.text(`${index + 1}. ${item.textContent}`, 15, yOffset);
+            // Adiciona o item da coluna da esquerda com numeração
+            doc.text(`${index + 1}. ${leftItem.textContent}`, 20, yOffset);
 
-            // Espaço para a linha de ligação
-            doc.line(60, yOffset - 2, 140, yOffset - 2); // Linha entre as colunas para ligação
+            // Espaço para que o aluno desenhe uma linha de correspondência
+            doc.line(70, yOffset - 2, 130, yOffset - 2); // Linha entre as colunas
 
-            // Itens da coluna direita
+            // Adiciona o item correspondente da coluna da direita
             if (rightItems[index]) {
-                doc.text(`${index + 1}. ${rightItems[index].textContent}`, 150, yOffset);
+                doc.text(`${index + 1}. ${rightItems[index].textContent}`, 140, yOffset);
             }
 
-            yOffset += itemGap; // Move para a próxima linha
+            yOffset += lineSpacing; // Move para a próxima linha
         });
 
-        // Salva o PDF
+        doc.save("Hannah_Matching_Game.pdf");
+    };
+
+    logo.onerror = function() {
+        doc.setFontSize(12);
+        doc.text("Name: ______________________________________________ Date: ____________", 50, 20);
+        doc.setFontSize(16);
+        doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 50, { align: "center" });
+
+        let yOffset = 70;
+        const lineSpacing = 10;
+
+        const leftItems = Array.from(document.querySelectorAll('#lessons .list-item'));
+        const rightItems = Array.from(document.querySelectorAll('#explanations .drop-zone'));
+
+        leftItems.forEach((leftItem, index) => {
+            if (yOffset > 280) {
+                doc.addPage();
+                yOffset = 20;
+            }
+
+            doc.text(`${index + 1}. ${leftItem.textContent}`, 20, yOffset);
+            doc.line(70, yOffset - 2, 130, yOffset - 2);
+
+            if (rightItems[index]) {
+                doc.text(`${index + 1}. ${rightItems[index].textContent}`, 140, yOffset);
+            }
+
+            yOffset += lineSpacing;
+        });
+
         doc.save("Hannah_Matching_Game.pdf");
     };
 }
