--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -447,7 +447,7 @@ function closeImage() {
         window.location.reload();
     }
 
-    function generatePDF() {
+   function generatePDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
 
@@ -497,9 +497,13 @@ function closeImage() {
                 yOffset = 20;
             }
 
-            // Adiciona o item da coluna da direita com espaço para número
-            doc.text(`(____) ${rightItem.textContent}`, 20, yOffset);
-            yOffset += lineSpacing;
+            // Adiciona o item da coluna da direita com espaço para número, e divide o texto em várias linhas, se necessário
+            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 160); // Divide o texto em linhas de até 160 unidades de largura
+            lines.forEach((line) => {
+                doc.text(line, 20, yOffset);
+                yOffset += lineSpacing; // Espaço entre as linhas
+            });
+            yOffset += lineSpacing; // Espaço extra entre as respostas
         });
 
         doc.save("Hannah_Matching_Game.pdf");
@@ -534,7 +538,11 @@ function closeImage() {
                 doc.addPage();
                 yOffset = 20;
             }
-            doc.text(`(____) ${rightItem.textContent}`, 20, yOffset);
+            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 160);
+            lines.forEach((line) => {
+                doc.text(line, 20, yOffset);
+                yOffset += lineSpacing;
+            });
             yOffset += lineSpacing;
         });
 
