--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -447,7 +447,7 @@ function closeImage() {
         window.location.reload();
     }
 
-   function generatePDF() {
+ function generatePDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
 
@@ -463,7 +463,7 @@ function closeImage() {
 
         // Adiciona o título e as linhas para "Name" e "Date"
         doc.setFontSize(12);
-        doc.text("Name: ______________________________________________ Date: ____________", 50, 20);
+        doc.text("Name: ____________________________________________ Date: __________", 50, 20);
 
         // Adiciona o título abaixo
         doc.setFontSize(16);
@@ -488,22 +488,21 @@ function closeImage() {
             yOffset += lineSpacing; // Move para a próxima linha
         });
 
-        yOffset += lineSpacing * 2; // Espaço extra entre as colunas
+        yOffset = 70; // Reseta o Y para alinhar a segunda coluna no topo, sem pular linhas extras
 
-        // Segunda coluna: Respostas sem numeração, mas com espaço para preenchimento
-        rightItems.forEach((rightItem, index) => {
+        // Segunda coluna: Respostas sem numeração e sem espaçamento adicional
+        rightItems.forEach((rightItem) => {
             if (yOffset > 280) {
                 doc.addPage();
                 yOffset = 20;
             }
 
-            // Adiciona o item da coluna da direita com espaço para número, e divide o texto em várias linhas, se necessário
+            // Adiciona o item da coluna da direita com espaço para número e divide o texto em várias linhas, se necessário
             const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 160); // Divide o texto em linhas de até 160 unidades de largura
             lines.forEach((line) => {
-                doc.text(line, 20, yOffset);
-                yOffset += lineSpacing; // Espaço entre as linhas
+                doc.text(line, 100, yOffset); // Posição ajustada para coluna da direita
+                yOffset += lineSpacing; // Sem espaço extra entre itens
             });
-            yOffset += lineSpacing; // Espaço extra entre as respostas
         });
 
         doc.save("Hannah_Matching_Game.pdf");
@@ -511,7 +510,7 @@ function closeImage() {
 
     logo.onerror = function() {
         doc.setFontSize(12);
-        doc.text("Name: ______________________________________________ Date: ____________", 50, 20);
+        doc.text("Name: ____________________________________________ Date: __________", 50, 20);
         doc.setFontSize(16);
         doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 50, { align: "center" });
 
@@ -531,19 +530,18 @@ function closeImage() {
             yOffset += lineSpacing;
         });
 
-        yOffset += lineSpacing * 2;
+        yOffset = 70;
 
-        rightItems.forEach((rightItem, index) => {
+        rightItems.forEach((rightItem) => {
             if (yOffset > 280) {
                 doc.addPage();
                 yOffset = 20;
             }
             const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 160);
             lines.forEach((line) => {
-                doc.text(line, 20, yOffset);
+                doc.text(line, 100, yOffset);
                 yOffset += lineSpacing;
             });
-            yOffset += lineSpacing;
         });
 
         doc.save("Hannah_Matching_Game.pdf");
