--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -478,7 +478,7 @@ function closeImage() {
         // Primeira coluna: Perguntas com numeração
         doc.setFontSize(12);
         leftItems.forEach((leftItem, index) => {
-            if (yOffset > 280) { // Adiciona uma nova página se o conteúdo ultrapassar o limite da página
+            if (yOffset > 270) { // Adiciona uma nova página se o conteúdo ultrapassar o limite da página
                 doc.addPage();
                 yOffset = 20;
             }
@@ -488,20 +488,21 @@ function closeImage() {
             yOffset += lineSpacing; // Move para a próxima linha
         });
 
-        yOffset = 70; // Reseta o Y para alinhar a segunda coluna no topo, sem pular linhas extras
+        yOffset = 70; // Reseta o Y para alinhar a segunda coluna no topo
 
-        // Segunda coluna: Respostas sem numeração e sem espaçamento adicional
+        // Segunda coluna: Respostas sem numeração e com quebras de linha automáticas
         rightItems.forEach((rightItem) => {
-            if (yOffset > 280) {
+            if (yOffset > 270) {
                 doc.addPage();
                 yOffset = 20;
             }
 
-            // Adiciona o item da coluna da direita com espaço para número e divide o texto em várias linhas, se necessário
-            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 160); // Divide o texto em linhas de até 160 unidades de largura
+            // Define um limite menor de largura para evitar corte de linha
+            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 70); // Ajusta o limite para 70 unidades de largura
+
             lines.forEach((line) => {
-                doc.text(line, 100, yOffset); // Posição ajustada para coluna da direita
-                yOffset += lineSpacing; // Sem espaço extra entre itens
+                doc.text(line, 100, yOffset); // Posição ajustada para a coluna da direita
+                yOffset += lineSpacing; // Espaçamento entre as linhas
             });
         });
 
@@ -522,7 +523,7 @@ function closeImage() {
 
         doc.setFontSize(12);
         leftItems.forEach((leftItem, index) => {
-            if (yOffset > 280) {
+            if (yOffset > 270) {
                 doc.addPage();
                 yOffset = 20;
             }
@@ -533,11 +534,11 @@ function closeImage() {
         yOffset = 70;
 
         rightItems.forEach((rightItem) => {
-            if (yOffset > 280) {
+            if (yOffset > 270) {
                 doc.addPage();
                 yOffset = 20;
             }
-            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 160);
+            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 70);
             lines.forEach((line) => {
                 doc.text(line, 100, yOffset);
                 yOffset += lineSpacing;
