--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -447,7 +447,7 @@ function closeImage() {
         window.location.reload();
     }
 
- function generatePDF() {
+function generatePDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
 
@@ -497,11 +497,11 @@ function closeImage() {
                 yOffset = 20;
             }
 
-            // Define um limite menor de largura para evitar corte de linha
-            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 70); // Ajusta o limite para 70 unidades de largura
+            // Ajuste o valor de `x` para mover a coluna mais à direita
+            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 90); // Ajusta o limite para 90 unidades de largura
 
             lines.forEach((line) => {
-                doc.text(line, 100, yOffset); // Posição ajustada para a coluna da direita
+                doc.text(line, 110, yOffset); // Posição ajustada para a coluna da direita
                 yOffset += lineSpacing; // Espaçamento entre as linhas
             });
         });
@@ -538,9 +538,9 @@ function closeImage() {
                 doc.addPage();
                 yOffset = 20;
             }
-            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 70);
+            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 90);
             lines.forEach((line) => {
-                doc.text(line, 100, yOffset);
+                doc.text(line, 110, yOffset);
                 yOffset += lineSpacing;
             });
         });
