--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -251,7 +251,7 @@
     </style>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" class="back-btn">
+<button onclick="window.history.back()" class="back-btn">Back</button>
     Back
 </button>
 <button id="pdfButton" class="pdf-btn" onclick="generatePDF()" style="display: none;">Generate PDF</button>
