--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -100,6 +100,15 @@
                 <a href="writing.html" class="activity-button">
                     <img src="../../imagens/writing.png" alt="Writing">
                 </a>
+                <a href="Bible.html" class="activity-button">
+                    <img src="../../imagens/Bible.png" alt="Bible">
+                </a>
+                <a href="test.html" class="activity-button">
+                    <img src="../../imagens/test.png" alt="Test">
+                </a>
+                <a href="lessonplan.html" class="activity-button">
+                    <img src="../../imagens/resources.png" alt="Resoucers">
+                </a>
              </div>
             <a href="../index.html" class="back-button">Back</a>
         </main>
