--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -195,34 +195,40 @@ firebase.auth().onAuthStateChanged(function(user) {
     let answeredQuestions = [];
     let speechSynthesisUtterance = null;
 
-    async function loadQuestions() {
+  async function loadQuestions() {
+    try {
         const response = await fetch('questions.txt');
+        if (!response.ok) throw new Error('Failed to load questions');
+        
         const text = await response.text();
         const lines = text.split('\n');
         let currentQuestion = null;
-       
+
         lines.forEach(line => {
             line = line.trim();
             if (line.startsWith('Q:')) {
-                if (currentQuestion) {
-                    questions.push(currentQuestion);
-                }
+                if (currentQuestion) questions.push(currentQuestion);
                 currentQuestion = { question: line.substring(2).trim(), answers: [], correct: '' };
-            } else if (/^[A-Z]\./.test(line)) {  
+            } else if (/^[A-D]\./.test(line)) {  
                 currentQuestion.answers.push(line);
             } else if (line.startsWith('Correct:')) {
-                currentQuestion.correct = line.split(':')[1].trim();
+                if (currentQuestion) {
+                    currentQuestion.correct = line.split(':')[1].trim();
+                }
             }
         });
 
-        if (currentQuestion) {
-            questions.push(currentQuestion);
-        }
+        if (currentQuestion) questions.push(currentQuestion);
 
         answeredQuestions = new Array(questions.length).fill(false);
-        displayQuestion();
         totalQuestions = questions.length;
+
+        // Exibe a primeira pergunta
+        displayQuestion();
+    } catch (error) {
+        console.error('Error loading questions:', error);
     }
+}
 
     function displayQuestion() {
         const container = document.getElementById('quiz-container');
