--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -137,6 +137,8 @@
     <button class="next-btn" id="next-btn" onclick="stopReading(); showNextQuestion()">Next</button>
 </div>
 
+<div id="quiz-container" class="question-container"></div>
+
 <!-- Modal de conclusão -->
 <div id="overlay"></div>
 <div id="completion-modal">
