--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -233,27 +233,47 @@ firebase.auth().onAuthStateChanged(function(user) {
 }
 
     function displayQuestion() {
-        const container = document.getElementById('quiz-container');
-        container.innerHTML = '';
+    const container = document.getElementById('quiz-container');
+    container.innerHTML = '';
 
-        const q = questions[currentQuestionIndex];
-        const questionDiv = document.createElement('div');
-        questionDiv.classList.add('question');
+    const q = questions[currentQuestionIndex];
+    const questionDiv = document.createElement('div');
+    questionDiv.classList.add('question');
 
-        const questionText = document.createElement('p');
-        questionText.id = 'question-text';
-        questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
-        questionDiv.appendChild(questionText);
+    const questionText = document.createElement('p');
+    questionText.id = 'question-text';
+    questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
+    questionDiv.appendChild(questionText);
 
-        q.answers.forEach((answer) => {
-            const answerLabel = document.createElement('label');
-            answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="checkAnswer(this, '${answer[0]}')"> ${answer}`;
-            questionDiv.appendChild(answerLabel);
-        });
+    q.answers.forEach((answer) => {
+        const answerLabel = document.createElement('label');
+        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="checkAnswer(this, '${answer[0]}')"> ${answer}`;
+        questionDiv.appendChild(answerLabel);
+    });
 
-        container.appendChild(questionDiv);
-        updateNavigationButtons();
+    container.appendChild(questionDiv);
+    updateNavigationButtons();
+
+    // Adiciona o botão "Finalizar" na última pergunta
+    const btnGroup = document.querySelector('.btn-group');
+    if (currentQuestionIndex === questions.length - 1) {
+        // Se o botão "Finalizar" ainda não foi adicionado
+        if (!document.getElementById('finish-btn')) {
+            const finishButton = document.createElement('button');
+            finishButton.id = 'finish-btn';
+            finishButton.className = 'next-btn';
+            finishButton.innerText = 'Finish';
+            finishButton.onclick = checkCompletion;
+            btnGroup.appendChild(finishButton);
+        }
+    } else {
+        // Remove o botão "Finalizar" se não estiver na última pergunta
+        const finishButton = document.getElementById('finish-btn');
+        if (finishButton) {
+            finishButton.remove();
+        }
     }
+}
 
     function updateNavigationButtons() {
         document.getElementById('prev-btn').disabled = currentQuestionIndex === 0;
