--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -15,6 +15,13 @@
             background-color: white;
         }
 
+#grade-display {
+            text-align: center;
+            font-size: 1.2em;
+            color: #555;
+            margin-bottom: 10px;
+        }
+
         h1 {
             text-align: center;
             font-size: 2.5em;
@@ -166,6 +173,32 @@
 
     // Inicializa o Firebase
     firebase.initializeApp(firebaseConfig);
+
+// Função para exibir a nota e a mensagem acima do título
+    function displayGradeAndMessage(userId) {
+        const dbRef = firebase.database().ref(`usuarios/${userId}`);
+        dbRef.once('value').then((snapshot) => {
+            const data = snapshot.val();
+            const gradeDisplay = document.getElementById('grade-display');
+
+            if (data && data.progresso && data.progresso.nota !== undefined) {
+                const grade = data.progresso.nota;
+                gradeDisplay.innerHTML = `Your Grade: ${grade}%`;
+
+                if (data.role === 'aluno' && data.professor) {
+                    gradeDisplay.innerHTML += "<br><span style='color: red;'>Only your teacher can cancel this grade</span>";
+                }
+            } else {
+                gradeDisplay.innerHTML = "No grade available.";
+            }
+        });
+    }
+
+    firebase.auth().onAuthStateChanged(function(user) {
+        if (user) {
+            displayGradeAndMessage(user.uid);
+        }
+    });
 
 // Função para exibir o botão PDF se o papel for 'professor' ou 'proprietario'
 function displayPdfButton(role) {
