--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<div id="grade-display"></div>
     <title>Hannah Test</title>
     <style>
         /* Estilos existentes mantidos */
