--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -29,7 +29,29 @@
             color: #333;
             margin-bottom: 20px;
         }
+ 
+ /* Estilo para a exibição da nota */
+        .grade-style {
+            text-align: center;
+            font-size: 1.4em;
+            color: #4CAF50; /* Cor verde para o texto da nota */
+            font-weight: bold;
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 2px solid #4CAF50;
+            border-radius: 10px;
+            background-color: #e8f5e9; /* Fundo verde claro */
+            width: 50%;
+            margin: 20px auto; /* Centralizar o elemento */
+        }
         
+        .grade-style span {
+            color: red; /* Cor vermelha para a mensagem do professor */
+            font-size: 0.9em;
+            display: block;
+            margin-top: 5px;
+        }
+       
         .question-container {
             display: flex;
             justify-content: center;
