--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div id="grade-display"></div>
+<div id="grade-display" class="grade-style"></div>
     <title>Hannah Test</title>
     <style>
         /* Estilos existentes mantidos */
@@ -16,13 +16,6 @@
             background-color: white;
         }
 
-#grade-display {
-            text-align: center;
-            font-size: 1.2em;
-            color: #555;
-            margin-bottom: 10px;
-        }
-
         h1 {
             text-align: center;
             font-size: 2.5em;
@@ -30,27 +23,27 @@
             margin-bottom: 20px;
         }
  
- /* Estilo para a exibição da nota */
-        .grade-style {
-            text-align: center;
-            font-size: 1.4em;
-            color: #4CAF50; /* Cor verde para o texto da nota */
-            font-weight: bold;
-            margin-bottom: 20px;
-            padding: 10px;
-            border: 2px solid #4CAF50;
-            border-radius: 10px;
-            background-color: #e8f5e9; /* Fundo verde claro */
-            width: 50%;
-            margin: 20px auto; /* Centralizar o elemento */
-        }
-        
-        .grade-style span {
-            color: red; /* Cor vermelha para a mensagem do professor */
-            font-size: 0.9em;
-            display: block;
-            margin-top: 5px;
-        }
+/* Estilo para a exibição da nota */
+.grade-style {
+    text-align: center;
+    font-size: 1.4em;
+    color: #4CAF50; /* Cor verde para o texto da nota */
+    font-weight: bold;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 2px solid #4CAF50;
+    border-radius: 10px;
+    background-color: #e8f5e9; /* Fundo verde claro */
+    width: 50%;
+    margin: 20px auto; /* Centralizar o elemento */
+}
+
+.grade-style span {
+    color: red; /* Cor vermelha para a mensagem do professor */
+    font-size: 0.9em;
+    display: block;
+    margin-top: 5px;
+}
        
         .question-container {
             display: flex;
@@ -213,7 +206,7 @@
                 if (role === 'aluno') {
                     firebase.database().ref(`usuarios/${userId}/professor`).once('value').then((professorSnapshot) => {
                         if (professorSnapshot.exists()) {
-                            gradeDisplay.innerHTML += "<br><span style='color: red;'>Only your teacher can cancel this grade</span>";
+                            gradeDisplay.innerHTML += "<br><span>Only your teacher can cancel this grade</span>";
                         }
                     });
                 }
@@ -227,11 +220,11 @@
     });
 }
 
-    firebase.auth().onAuthStateChanged(function(user) {
-        if (user) {
-            displayGradeAndMessage(user.uid);
-        }
-    });
+firebase.auth().onAuthStateChanged(function(user) {
+    if (user) {
+        displayGradeAndMessage(user.uid);
+    }
+});
 
 // Função para exibir o botão PDF se o papel for 'professor' ou 'proprietario'
 function displayPdfButton(role) {
