--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -428,8 +428,12 @@ function checkCompletion() {
     // Exibe o modal de conclusão
     showModal();
 
-    // Salva a nota no banco de dados
-    ensureUserIsAuthenticated((userId) => saveGrade(userId, grade));
+    // Salva a nota no banco de dados e, após salvar, atualiza a exibição da nota na tela
+    ensureUserIsAuthenticated((userId) => {
+        saveGrade(userId, grade).then(() => {
+            displayGradeAndMessage(userId); // Atualiza a exibição da nota na tela
+        });
+    });
 }
 
 function saveGrade(userId, grade) {
