--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -460,17 +460,17 @@ function checkCompletion() {
         // Verifica se o aluno está vinculado a um professor
         isStudentLinkedToProfessor(userId).then(isLinked => {
             if (grade >= 70) {
-                // Altera a cor da nota com base na pontuação
-                gradeDisplay.classList.remove('low-grade'); // Remove a classe de nota baixa, se houver
-                gradeDisplay.classList.add('grade-style'); // Estilo padrão para nota >= 70
+                // Aplica o estilo padrão (verde) para notas >= 70%
+                gradeDisplay.classList.remove('grade-style-red');
+                gradeDisplay.classList.add('grade-style');
                 showModal(); // Exibe o modal de conclusão
 
                 // Avança a fase apenas se o aproveitamento for suficiente
                 updateNextPhase(userId);
             } else {
-                // Estilo de nota baixa
-                gradeDisplay.classList.remove('grade-style'); // Remove a classe de nota alta, se houver
-                gradeDisplay.classList.add('low-grade'); // Adiciona estilo de nota baixa
+                // Aplica o estilo de nota baixa (vermelho)
+                gradeDisplay.classList.remove('grade-style');
+                gradeDisplay.classList.add('grade-style-red');
                 gradeDisplay.innerHTML = `Your Grade: ${grade}% - Minimum 70% required to pass.`;
 
                 if (isLinked) {
