--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -220,7 +220,11 @@ function displayGradeAndMessage(userId) {
         const gradeDisplay = document.getElementById("grade-display");
 
         if (grade !== null) {
+            // Define o conteúdo da nota
+            gradeDisplay.style.display = "block"; // Exibe o quadro de notas
             gradeDisplay.innerHTML = `Your Grade: ${grade}%`;
+
+            // Aplica a classe vermelha se a nota for menor que 70, caso contrário, aplica a padrão
             if (grade < 70) {
                 gradeDisplay.classList.add("grade-style-red");
                 gradeDisplay.classList.remove("grade-style");
@@ -229,17 +233,19 @@ function displayGradeAndMessage(userId) {
                 gradeDisplay.classList.remove("grade-style-red");
             }
 
+            // Verifica se o aluno está vinculado a um professor
             isStudentLinkedToProfessor(userId).then(isLinked => {
                 if (isLinked) {
                     gradeDisplay.innerHTML += "<br><span style='color: red;'>Only your teacher can cancel this grade</span>";
                 }
             });
         } else {
-            gradeDisplay.innerHTML = "No grade available.";
+            // Oculta o quadro de notas se a variável nota não existir
+            gradeDisplay.style.display = "none";
         }
     }, (error) => {
         console.error("Error retrieving grade:", error);
-        document.getElementById("grade-display").innerHTML = "Error loading grade.";
+        document.getElementById("grade-display").style.display = "none";
     });
 }
 
