--- a/Level1/Unit1/Test/index.html
+++ b/Level1/Unit1/Test/index.html
@@ -545,28 +545,28 @@ function saveGrade(userId, grade) {
     try {
         if (currentPhase === "end") {
             // Caso "end": cria um novo Level e define Unit1/fase1 como true
-            const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-            await dbRef.child(nextLevel).set({});
-            console.log(`Novo Level criado: ${nextLevel}`);
-
-            await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
-            console.log(`Primeira fase liberada no novo Level: ${nextLevel}/Unit1/fase1`);
+            const nextLevelNumber = parseInt(level.replace('Level', '')) + 1;
+            const nextLevel = `Level${nextLevelNumber}`;
+            await dbRef.child(nextLevel).set({
+                Unit1: { fase1: true }
+            });
+            console.log(`Novo Level criado: ${nextLevel} com Unit1/fase1 liberada.`);
 
         } else if (currentPhase === "last") {
             // Caso "last": cria a próxima Unit e libera fase1
-            const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-            await dbRef.child(`${level}/${nextUnit}`).set({});
-            console.log(`Nova Unidade criada dentro de ${level}: ${nextUnit}`);
-
-            await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
-            console.log(`Primeira fase liberada na nova Unidade: ${level}/${nextUnit}/fase1`);
+            const nextUnitNumber = parseInt(unit.replace('Unit', '')) + 1;
+            const nextUnit = `Unit${nextUnitNumber}`;
+            await dbRef.child(`${level}/${nextUnit}`).set({
+                fase1: true
+            });
+            console.log(`Nova Unidade criada dentro de ${level}: ${nextUnit} com fase1 liberada.`);
 
         } else {
             // Caso fase intermediária: libera a próxima fase
             const nextPhase = parseInt(currentPhase) + 1;
             await dbRef.child(`${level}/${unit}`).update({
-                [`fase${currentPhase}`]: true,
-                [`fase${nextPhase}`]: true
+                [`fase${currentPhase}`]: true, // Marca a fase atual como concluída
+                [`fase${nextPhase}`]: true     // Libera a próxima fase
             });
             console.log(`Fase atual concluída: ${level}/${unit}/fase${currentPhase}`);
             console.log(`Próxima fase liberada: ${level}/${unit}/fase${nextPhase}`);
