--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -263,7 +263,7 @@
       }
     }
 
-   function loadProgress(studentId) {
+  function loadProgress(studentId) {
   const progressContainer = document.getElementById('progress-container');
   const progressRef = db.ref(`usuarios/${studentId}/progresso`);
   
@@ -280,6 +280,9 @@
           totalUnits++;
           let completedPhases = 0;
           let totalPhases = 0;
+          
+          // Adiciona uma variável para armazenar a nota da Unit, assumindo que o valor está armazenado no banco de dados
+          const unitScore = unitSnap.child('nota').val(); // 'nota' é o nome do campo no banco de dados onde a nota da Unit está armazenada
           
           let phasesHTML = '';
           unitSnap.forEach(phaseSnap => {
@@ -303,6 +306,7 @@
               <button onclick="toggleVisibility('${unitSnap.key}')">Unit ${unitSnap.key.replace('Unit', '')}</button>
               <div id="${unitSnap.key}" style="display: none; margin-left: 20px;">
                 <p>${completedPhases}/${totalPhases} phases completed</p>
+                <p>Your Test Score: ${unitScore !== null ? unitScore : 'No score available'}</p>
                 ${phasesHTML}
               </div>
             </div>
