--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -283,6 +283,7 @@
           
           let phasesHTML = '';
           let notesHTML = '';
+          let noteCount = 1; // Contador para numerar as notas
 
           unitSnap.forEach(childSnap => {
             const key = childSnap.key;
@@ -300,8 +301,10 @@
 
               phasesHTML += `<p>Phase ${phase}: ${isComplete ? 'Complete ✅' : 'Incomplete ❌'}</p>`;
             } else if (key.startsWith('nota')) {
-              // Exibir notas da Unit
-              notesHTML += `<p>Your Test Score (${key}): ${value !== null ? value : 'No score available'}</p>`;
+              // Formatar a exibição das notas com base no valor
+              const color = value < 70 ? 'red' : 'blue';
+              notesHTML += `<p>Your Test Score ${noteCount}: <span style="color: ${color}; font-weight: bold;">${value !== null ? value : 'No score available'}</span></p>`;
+              noteCount++; // Incrementar o número da nota para a próxima
             }
           });
           
