--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -120,6 +120,18 @@
   border-radius: 12px; /* Bordas arredondadas */
   transition: width 0.4s ease; /* Animação suave ao carregar */
 }
+
+/* Estilo para o contêiner de progresso para combinar com o contêiner superior */
+.progress-panel {
+  background-color: #ffffff; /* Cor de fundo branca */
+  width: 90%; /* Largura máxima para alinhar com o contêiner superior */
+  max-width: 600px; /* Limite de largura máxima */
+  margin: 20px auto; /* Centralizar o contêiner */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra semelhante ao contêiner superior */
+  text-align: center;
+}
   </style>
 </head>
 <body>
@@ -337,7 +349,8 @@ const structure = {
   
   progressRef.once('value', snapshot => {
     if (snapshot.exists()) {
-      let progressHTML = '<h3>Your Progress</h3>';
+      // Adicionando a div progress-panel para estilo
+      let progressHTML = '<div class="progress-panel"><h3>Your Progress</h3>';
       
       Object.keys(structure).forEach(levelKey => {
         const level = levelKey.replace('Level', ''); // Remove "Level" from key
@@ -414,6 +427,8 @@ const structure = {
         });
       });
       
+      // Fechar a div progress-panel
+      progressHTML += '</div>';
       progressContainer.innerHTML = progressHTML;
     } else {
       progressContainer.innerHTML = '<p>No progress data available.</p>';
